--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: default.hbs
-theme: theme: jekyll-theme-modernist
+markdown: kramdown
+theme: jekyll-theme-minimal
 ---
 <html>
     <body>
