draft working with navigation

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-markdown: kramdown
-theme: jekyll-theme-minimal
+layout: default
+title: BayLearn - Machine Learning Symposium, SF Bay Area
 ---
-<html>
-    <body>
+{% include nav.html %}
+<body>
     <h1> Overview </h1>
     <p>
 The BayLearn Symposium aims at gathering scientists in machine learning from the San Francisco Bay Area. While it promotes community building between local researchers from academic and industrial institutions, it also welcomes visitors. This one-day event combines invited talks and posters to foster exchange of ideas.
@@ -18,9 +18,9 @@ We encourage the submission of poster abstracts. Acceptable material includes wo
         <li> October 15th, 2020 - BayLearn 2020 Virtual Symposium 
     </ul>
 <h2> Organizing Committee </h2>
-</ul>
+<ul>
 <li> Jerremy Holland, Apple Inc.
-<li> Jean-Francois Paiement, AT&T Research
+<li> Jean-Francois Paiement, AT&amp;T Research
 <li> Sudarshan Lamkhede, Netflix Research
 <li> Alice Xiang, Partnership on AI
 </ul>
@@ -32,5 +32,4 @@ We encourage the submission of poster abstracts. Acceptable material includes wo
 <li> Alexei Pozdnukhov, Sidewalk Labs
 <li> Mohak Shah, LG Electronics 
 </ul>
-    </body>
-</html>
+</body>
