--- a/submissions.html
+++ b/submissions.html
@@ -4,14 +4,14 @@ layout: default
 {% include nav.html %}
 <body>
 
-Call-for-Submissions
+    <h1>Call-for-Submissions</h1>
 
-Please submit your proposals via CMT in the form of an abstract as a 2-page pdf in the NeurIPS Style by 11:59:59PM PDT, June 18th, 2020.  References can be included in a third page.
+    Please submit your proposals via <a href="https://cmt3.research.microsoft.com/BAYLEARN2020"> BayLearn 2020 CMT </a> in the form of an abstract as a 2-page pdf in the <a href="https://neurips.cc/Conferences/2019/PaperInformation/StyleFiles">NeurIPS Style</a> by 11:59:59 PM PDT, June 18th, 2020.  References can be included in a third page.
 Note: Submissions are not blind-reviewed, thus please include authors' names and affiliations in the submissions.
 
 Acceptable material includes work which has already been submitted or published, preliminary results and controversial findings.
 We do not intend to publish paper proceedings, only abstracts will be shared through an online repository. Our primary goal is to foster discussion!
 
-For examples of previously accepted talks, please watch the paper presentations from BayLearn 2019 or review the complete list of accepted submissions. For examples of abstracts that have been selected in the past, please see the schedule of talks from BayLearn 2018. This page has videos of the talks and links to PDFs of the abstracts are provided for each of the selected talks.
+For examples of previously accepted talks, please watch the paper presentations from <a href="http://sites.google.com/site/baylearn2019/schedule">BayLearn 2019</a> or review the complete list of <a href="http://sites.google.com/site/baylearn2019/submissions">accepted submissions</a>. For examples of abstracts that have been selected in the past, please see the <a href="http://sites.google.com/site/baylearn2018/schedule">schedule of talks from BayLearn 2018</a>. This page has videos of the talks and links to PDFs of the abstracts are provided for each of the selected talks.
 
 </body>
